<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/aboutus"
        android:textSize="20sp"
        android:gravity="center"/>
    <ImageView 
        android:id="@+id/iv_back"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:src="@drawable/rub_course_back_icon"
        android:contentDescription="@drawable/rub_course_back_icon"
        android:layout_margin="20dp"/>
    
    </RelativeLayout>
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/register_and_login_icon"
        android:contentDescription="@drawable/register_and_login_icon"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/cengke"
        android:textSize="15sp"
        android:gravity="center"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/version"
        android:textSize="12sp"
        android:gravity="center"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView 
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/describe"
        android:textSize="15sp"
        android:gravity="start"/>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/serviceprotocol"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:gravity="center"/>
      <TextView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/cqcompany"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:textColor="@color/beizhu"/>
    </LinearLayout>

</LinearLayout>
