<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:background="@color/backgroud_color" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_image"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="7dp"
        android:text="@string/erhu"
        android:textColor="@color/title1_color_black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/item_sing_up_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_title"
        android:text="@string/sing_up_count"
        android:textColor="@color/other_text_gray"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/item_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_title"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/item_sing_up_count"
        android:layout_toRightOf="@id/item_sing_up_count"
        android:text="@string/company"
        android:textColor="@color/other_text_gray"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/item_class_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_company"
        android:layout_marginTop="4dp"
        android:background="@drawable/shape_for_gray_text_type"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:text="@string/instrument"
        android:textColor="@color/other_text_gray"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/item_class_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_company"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/item_class_type"
        android:layout_toRightOf="@id/item_class_type"
        android:background="@drawable/shape_for_gray_text_type"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:text="@string/class_leave"
        android:textColor="@color/other_text_gray"
        android:textSize="10sp" />

    <LinearLayout
        android:id="@+id/item_end_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/item_class_leave"
        android:layout_alignEnd="@id/item_image"
        android:layout_alignRight="@id/item_image"
        android:paddingBottom="2dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yu"
            android:textColor="@color/main_text_gray"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/item_remaining_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/main_orange"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tian"
            android:textColor="@color/main_text_gray"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>