<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/image_login_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@drawable/rub_course_back_icon"
            android:src="@drawable/rub_course_back_icon" />

        <TextView
            android:id="@+id/text_login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/auxiliary_color_orange" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="@color/backgroud_color" />

    <EditText
        android:id="@+id/edit_login_phone_and_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/phone_number_email_address"
        android:inputType="phone"
        android:padding="15dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/backgroud_color" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/button_login_immediately"
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners_and_solid"
        android:text="@string/login_immediately"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text_login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/auxiliary_color_orange" />
    </LinearLayout>

</LinearLayout>