<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical" >
    <!-- 圈子分类布局的listview布局 -->
    <TextView 
        android:id="@+id/china_literature_ceremony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/china_literature_ceremony1"
        android:textColor="@color/title2_color_black"
        android:textSize="14sp"/>
    <TextView 
        android:id="@+id/circle_devotion_literature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/devotion_literature"
        android:textColor="@color/main_text_gray"
        android:textSize="12sp"/>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView 
            android:id="@+id/circle_creation_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creation_user_name"
            android:textColor="@color/other_text_gray"
            android:textSize="10sp"/>
        <ImageView 
            android:id="@+id/circle_classify_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/circle_creation_user_name"
            android:layout_toEndOf="@+id/circle_creation_user_name"
            android:src="@drawable/rub_course_grey_comment"
            android:contentDescription="@drawable/rub_course_grey_comment"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
        <TextView 
            android:id="@+id/circle_classify_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/circle_classify_comment_icon"
            android:layout_toEndOf="@+id/circle_classify_comment_icon"
            android:text="@string/comment_number"
            android:textColor="@color/other_text_gray"
            android:textSize="10sp"/>
        <TextView 
            android:id="@+id/circle_last_comment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/last_comment_time"
            android:textColor="@color/other_text_gray"
            android:textSize="10sp"/>
    </RelativeLayout>
</LinearLayout>
