<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <ImageView
            android:id="@+id/title_back_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@drawable/rub_course_back_icon"
            android:padding="5dp"
            android:src="@drawable/rub_course_back_icon" />

        <TextView
            android:id="@+id/title_class_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sort"
            android:textColor="#292929"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/title_share"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@drawable/share_bg_right"
            android:padding="4dp"
            android:src="@drawable/share_bg_right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/title_class_detail"
            android:layout_marginTop="10dp"
            android:background="@color/drive_line_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp" >

        <TextView
            android:id="@+id/company_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/main_orange"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/company_title"
            android:layout_marginTop="6dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuyue"
                android:textColor="@color/other_text_gray"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/order_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:text="@string/one"
                android:textColor="@color/main_orange"
                android:textSize="11sp" />

            <RatingBar
                android:id="@+id/jigou_ratingBar_c"
                style="@style/JiGouRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:maxHeight="12dp"
                android:minWidth="13dp"
                android:progress="3"
                android:stepSize="1" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/class_is_collect"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/class_collect_selector"
            android:button="@null" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/class_events_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erhu"
            android:textColor="@color/title1_color_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/class_events_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/start"
            android:textColor="@color/other_text_gray"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/class_events_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/time"
            android:textColor="@color/other_text_gray"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/class_image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="7dp"
            android:background="@color/backgroud_color"
            android:contentDescription="@color/backgroud_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/detail"
            android:textColor="@color/title2_color_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/class_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe"
            android:textColor="@color/main_text_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/join_class"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
   		android:layout_marginLeft="30dp"
   		android:layout_marginRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_rounded_corners_and_s"
        android:gravity="center"
        android:text="@string/joinClass"
        android:textColor="@color/main_orange"
        android:textSize="14sp" />

</LinearLayout>